added toggle switch to edit table, added new component scrollers,

--- a/src/app/components/pages/create-assets/create-assets.component.html
+++ b/src/app/components/pages/create-assets/create-assets.component.html
@@ -11,9 +11,9 @@
                 
                 <div class="custom-datatable">
                     
-                    <input type='text' class="filter-ngx form-control" placeholder='Search...'
-                        (keyup)='updateFilter($event)' />
-                        <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
+                    <!-- <input type='text' class="filter-ngx form-control" placeholder='Search...'
+                        (keyup)='updateFilter($event)' /> -->
+                        <button class="pull-right btn btn-warning" >Download</button><br><br>
                     
                     <!-- <select name="ordersFilter" (change)="filterOrders($event.target.value)">
                         <option>All orders</option>
