--- a/src/app/components/pages/create-page/create-page.component.html
+++ b/src/app/components/pages/create-page/create-page.component.html
@@ -1,5 +1,5 @@
 <!-- Container-fluid starts-->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="card">
         <div class="card-header">
             <h5>Add Page</h5>
@@ -50,7 +50,7 @@
                         </form>
                     </ng-template>
                 </ngb-tab>
-            </ngb-tabset>
+            </ngb-tabset> -->
             <!-- <ul class="nav nav-tabs tab-coupon" id="myTab" role="tablist">
                 <li class="nav-item"><a class="nav-link active show" id="general-tab" data-toggle="tab" href="#general" role="tab" aria-controls="general" aria-selected="true" data-original-title="" title="">General</a></li>
                 <li class="nav-item"><a class="nav-link" id="restriction-tabs" data-toggle="tab" href="#seo" role="tab" aria-controls="seo" aria-selected="false" data-original-title="" title="">SEO</a></li>
@@ -96,10 +96,10 @@
                     </form>
                 </div>
             </div> -->
-            <div class="pull-right">
+            <!-- <div class="pull-right">
                 <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Container-fluid Ends-->
