--- a/src/app/components/products/physical/sub-category/sub-category.component.html
+++ b/src/app/components/products/physical/sub-category/sub-category.component.html
@@ -1,5 +1,5 @@
 <!-- Container-fluid starts-->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
             <div class="card">
@@ -48,5 +48,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Container-fluid Ends-->
