--- a/src/app/components/sales/orders/orders.component.html
+++ b/src/app/components/sales/orders/orders.component.html
@@ -9,13 +9,37 @@
                             (keyup)='updateFilter($event)' />
                             <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
                         
-                        <select name="ordersFilter" (change)="filterOrders($event.target.value)">
-                            <option>All orders</option>
+                        <!-- <select name="ordersFilter" (change)="filterOrders($event.target.value)">                            
+                            <option>New orders</option>
                             <option>Primary order</option>
                             <option>Renewal order</option>
                             <option>Replacement order</option>
                             <option>Return order</option>
-                        </select>
+                            <option>All orders</option>
+                        </select> -->
+                        <div class="row mb-3 filter-buttons">
+                          <div class="col-2">
+                            <button class="pull-right btn btn-warning" (click)="filterOrders('New orders')">New <span>orders</span></button>
+                          </div>
+                          <div class="col-2">
+                            <button class="pull-right btn btn-warning" (click)="filterOrders('Primary order')">Primary order</button>
+                          </div>
+                          <div class="col-2">
+                            <button class="pull-right btn btn-warning" (click)="filterOrders('Renewal order')">Renewal order</button>
+                          </div>
+                          <div class="col-2">
+                            <button class="pull-right btn btn-warning" (click)="filterOrders('Replacement order')">Replacement order</button>
+                          </div>
+                          <div class="col-2">
+                            <button class="pull-right btn btn-warning" (click)="filterOrders('Return order')">Return order</button>
+                          </div>
+                          <div class="col-2">
+                            <button class="pull-right btn btn-warning" (click)="filterOrders('All orders')">All <span>orders</span></button>
+                          </div>
+                          <div class="col-4 mt-4">
+                            <h3>{{orderName}}</h3>
+                          </div>
+                        </div>
                         <table class="table table-striped table-bordered" >
                           <thead>
                             <tr>
