--- a/src/app/components/sales/orders/orders.component.scss
+++ b/src/app/components/sales/orders/orders.component.scss
@@ -15,3 +15,12 @@ h4{
     border: 1px solid black;
     box-shadow: none;
 }
+
+.filter-buttons{
+    button{
+        min-width:100%;
+        span{
+            display: block;
+        }
+    }
+}
